# remembermcp-for-lm-studio

./: .clang-format  .gitignore  README.md  fix_instruction_manager.py  mcp-config-example.json  pyproject.toml  pyrightconfig.json  test_lmstudio_sync.py
scripts/: run_mode_manager_mcp.sh
src/mode_manager_mcp/: __init__.py  __main__.py  fastmcp_compat.py  instruction_manager.py  path_utils.py  simple_server.py  simple_server_new.py
src/mode_manager_mcp/tools/: instruction_tools.py  remember_tools.py
tests/: conftest.py  test_memory_isolation.py  test_unit_fastmcp_compat.py
