
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mode-manager-mcp"
version = "2.0.2"
description = "Mode Manager MCP: Server for managing LM Studio .instructions.md files (persistent memory)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "mcp",
    "LM Studio",
    "instruction",
    "prompts",
    "mode-manager",
    "memory",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.12.0",
    "fastmcp>=2.11.0",
    "pydantic>=2.0.0",
    "typing-extensions",
    "psutil>=7.0.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pyright>=1.1.0",
    "pre-commit>=3.0.0",
    "types-psutil",
    "types-requests",
    "pydocstringformatter>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/NiclasOlofsson/mode-manager-mcp"
Repository = "https://github.com/NiclasOlofsson/mode-manager-mcp"
Issues = "https://github.com/NiclasOlofsson/mode-manager-mcp/issues"
Documentation = "https://github.com/NiclasOlofsson/mode-manager-mcp#readme"

[project.scripts]
mode-manager-mcp = "mode_manager_mcp.__main__:main"


[tool.hatch.build.targets.sdist]
include = ["src/**", "README.md", "LICENSE", "library/**", "test_basic.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/mode_manager_mcp"]


[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pyright>=1.1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "types-psutil",
    "types-requests",
    "pydocstringformatter>=0.4.0",
    "bump-my-version>=0.11.0",
]


[tool.ruff]
line-length = 250
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnusedFunction = false
reportUnusedVariable = "warning"
reportUnnecessaryComparison = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]


[tool.pydocstringformatter]
write = true
style = "pep257"
strip-whitespaces = true

[tool.bumpversion]
current_version = "2.0.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
tag_name = "v{new_version}"
message = "chore: bump version to {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""
